<resources>
    <string name="app_name">知乎</string>
    <string name="open_drawer_desc"/>
    <string name="close_drawer_desc"/>

    <string name="login_tip">请登录</string>

    <string name="load_failed">加载失败</string>
    <string name="image_description">这是一张图片</string>

    <string name="action_messages">消息</string>
    <string name="action_write_comment">写评论</string>
    <string name="empty_description">空空如也\n赶紧去收藏吧</string>

    <string name="menu_home_tip">首页</string>
    <string name="menu_themes_tips">主题</string>
    <string name="menu_sections_tips">栏目</string>

    <string name="menu_options">选项</string>
    <string name="menu_collected_tips">收藏</string>
    <string name="menu_night_tips">夜景</string>
    <string name="menu_day_tips">日景</string>
    <string name="menu_setting_tips">设置</string>
    <string name="menu_about_tips">关于</string>

    <string name="refresh_item_title">今日热点</string>
    <string name="about">关于</string>
    <string name="about_detail">本应用属于一款阅读软件，主要为用户推送最新的热门文章，所有内容均不收取费！\n\n
        文章主要来源于知乎日报网站，部分图片来自必应搜索(bing)首页，所有来源未经授权，如有侵权，请立即联系本作者删除！</string>
    <string name="tencent_weixin">微信号：FegKuagXioZ(点击获取二维码)</string>
    <string name="visit_github_title">项目地址</string>
    <string name="visit_github_detail">GitHub地址:https://github.com/artzok/ZhiHu</string>
    <string name="open_source_title">使用的第三方开源框架</string>
    <string name="open_source_list">
    appcompat-v7\n
    design\n
    recyclerview-v7\n
    cardview-v7\n
    rxjava\n
    rxandroid\n
    gson\
    retrofit\n
    converter-gson\n
    adapter-rxjava\n
    okhttp\n
    logging-interceptor\n
    picasso\n
    dagger\n
    dagger-compiler\n
    butterknife\n
    butterknife-compiler\n
    circleimageview\n
    autoviewpager\n
    leakcanary-android\n
    leakcanary-android-no-op\n
    leakcanary-android-no-op\n
    tbs webView\n
    multidex\n
    buglycrashreport\n
    realm\n
    </string>
    <string name="version_info">版本:</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="exit_tips">是否确认退出应用？</string>
    <string name="exit_title">提示</string>
    <string name="menu_download">离线下载所有内容</string>


    <string-array name="basic_permissions">
        <item>android.permission.ACCESS_NETWORK_STATE</item>
        <item>android.permission.READ_PHONE_STATE</item>
        <item>android.permission.READ_EXTERNAL_STORAGE</item>
        <item>android.permission.WRITE_EXTERNAL_STORAGE</item>
    </string-array>

    <string-array name="main_permissions">
        <item>android.permission.ACCESS_WIFI_STATE</item>
        <item>android.permission.ACCESS_NETWORK_STATE</item>
    </string-array>

    <!-- 设置页面 -->
    <string name="setting_normal">常规</string>
    <string name="setting_other">其他</string>
    <string name="setting_feedback">反馈</string>

    <string name="setting_offline_download">自动离线下载</string>
    <string name="setting_offline_download_msg">仅Wi-Fi下可用,自动下载最新内容</string>
    <string name="setting_no_image">无图模式</string>
    <string name="setting_no_image_msg">2G/3G 网络下载不了图片</string>
    <string name="setting_big_text">大字号</string>
    <string name="setting_propelling">推送消息</string>
    <string name="setting_share_weibo">点评分享到微博</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_feedback_msg">意见反馈</string>
    <string name="action_send_comment">发送评论</string>


</resources>
